SIS model e comunità USA

--- a/hubs.ipynb
+++ b/hubs.ipynb
@@ -494,6 +494,14 @@
     "print(\"Centralità media: \", statistics.mean(centr_sequence))\n",
     "print(\"Centralità mediana: \", statistics.median(centr_sequence))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Avendo ottenuto un valore medio (e mediano) basso, possiamo dire che i nodi del grafo sono generalmente lontani fra loro, ovvero che la distanza media tra i nodi è relativamente grande"
+   ]
   }
  ],
  "metadata": {
