analisi comunità USA + piccole modifiche

--- a/hubs.ipynb
+++ b/hubs.ipynb
@@ -28,6 +28,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Densità"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La densità della rete si riferisce alla quantità di connessioni presenti nella rete rispetto al numero totale di connessioni possibili tra tutti i nodi della rete.\n",
+    "\n",
+    "Se la densità della rete è bassa, significa che solo una piccola percentuale delle connessioni possibili è effettivamente presente nella rete. In altre parole, ci sono molti nodi nella rete che non sono collegati tra di loro."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0036854903095776227"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nx.density(G)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hub"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Trovo il nodo (o i nodi) con grado massimo"
    ]
   },
@@ -59,7 +105,7 @@
     "La centralità di un nodo invece è una misura più complessa che tiene conto della posizione del nodo all'interno della rete e del ruolo che esso svolge nella comunicazione tra gli altri nodi.\n",
     "\n",
     "La betweenness, ad esempio, misura la frequenza con cui un nodo è coinvolto nei percorsi più brevi tra tutti gli altri nodi della rete. \n",
-    "Quindi un nodo con alta betweenness è quindi un nodo che svolge un ruolo di ponte tra diverse parti della rete e che, se rimosso, potrebbe causare un notevole impatto sulla connettività della rete stessa.\n",
+    "Quindi un nodo con alta betweenness è un nodo che svolge un ruolo di ponte tra diverse parti della rete e che, se rimosso, potrebbe causare un notevole impatto sulla connettività della rete stessa.\n",
     "\n",
     "In altre parole, il grado di un nodo può essere utile per capire il numero di connessioni che esso ha con gli altri nodi della rete, ma non tiene conto della posizione e del ruolo del nodo nella rete. \n",
     "La betweenness, invece, è una misura più sofisticata che tiene conto anche della posizione del nodo e del suo ruolo nella comunicazione tra gli altri nodi, risultando quindi più efficace per valutare la centralità dei nodi in una rete."
