--- a/robustezza.ipynb
+++ b/robustezza.ipynb
@@ -866,6 +866,19 @@
     "plt.plot(num_nodes_removed, random_attack_core_proportions, marker=',', color=\"red\", label=\"Random failure\")\n",
     "plt.legend()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si nota la differenza di “aggressività” dei 4 tipi di attacchi:\n",
+    "\n",
+    "- Random failure: dipende molto dai nodi scelti randomicamente\n",
+    "- Attacchi mirati in base alla closeness: più aggressivo nelle fasi iniziali rispetto all’attacco basato sul grado, ma si raggiunge la disconnessione della rete più tardi rispetto a quest’ultimo\n",
+    "- Attacchi mirati in base al grado: simile, come aggressività, all’attacco basato su closeness, ma si arriva prima alla disconnessione della rete\n",
+    "- Attacchi mirati in base alla betweenness: l’attacco più aggressivo fra i 4"
+   ]
   }
  ],
  "metadata": {
