--- a/hubs.ipynb
+++ b/hubs.ipynb
@@ -66,6 +66,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Coeff clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4905417456798235"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nx.average_clustering(G)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Hub"
    ]
   },
@@ -566,7 +594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
