--- a/comunità_usa.ipynb
+++ b/comunità_usa.ipynb
@@ -280,6 +280,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Una modularità  bassa, indica che la rete non è molto divisa in comunità distinte\n",
+    "\n",
+    "UN alto coefficiente di clustering e una bassa modularità potrebbero indicare una rete aeroportuale caratterizzata da gruppi localmente coesi di aeroporti, ma con una connettività più uniforme e meno strutturata a livello globale.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Partizionamento con kernighan Lin bisection"
    ]
   },
