--- a/hubs.ipynb
+++ b/hubs.ipynb
@@ -70,6 +70,18 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Il coefficiente di clustering è la misura del grado in cui i nodi di un grafo tendono ad essere connessi fra loro\n",
+    "\n",
+    "Un coefficiente di clustering medio pari circa a 0.5 indica che la rete aeroportuale mondiale ha un raggruppamento moderato\n",
+    "\n",
+    "Avere un coefficiente di clustering alto e una densità molto bassa è normale in una rete complessa, questo indica che la rete è fatta a “grappoli” e internamente i grappoli sono molto densi"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -106,6 +118,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " un hub è un nodo che è connesso a molti altri nodi e che gioca un ruolo importante nel trasferimento di informazioni o nella diffusione di influenza all'interno della rete stessa"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -132,11 +152,8 @@
     "Il grado di un nodo in un grafo indica semplicemente il numero di archi che incidono su quel nodo, ovvero il numero di connessioni che ha con altri nodi della rete. \n",
     "La centralità di un nodo invece è una misura più complessa che tiene conto della posizione del nodo all'interno della rete e del ruolo che esso svolge nella comunicazione tra gli altri nodi.\n",
     "\n",
-    "La betweenness, ad esempio, misura la frequenza con cui un nodo è coinvolto nei percorsi più brevi tra tutti gli altri nodi della rete. \n",
-    "Quindi un nodo con alta betweenness è un nodo che svolge un ruolo di ponte tra diverse parti della rete e che, se rimosso, potrebbe causare un notevole impatto sulla connettività della rete stessa.\n",
-    "\n",
-    "In altre parole, il grado di un nodo può essere utile per capire il numero di connessioni che esso ha con gli altri nodi della rete, ma non tiene conto della posizione e del ruolo del nodo nella rete. \n",
-    "La betweenness, invece, è una misura più sofisticata che tiene conto anche della posizione del nodo e del suo ruolo nella comunicazione tra gli altri nodi, risultando quindi più efficace per valutare la centralità dei nodi in una rete."
+    "La betweenness, misura la frequenza con cui un nodo è coinvolto nei percorsi più brevi tra tutti gli altri nodi della rete. \n",
+    "Quindi un nodo con alta betweenness è un nodo che svolge un ruolo di ponte tra diverse parti della rete e che, se rimosso, potrebbe causare un notevole impatto sulla connettività della rete stessa."
    ]
   },
   {
@@ -189,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La bassa betweenness dell'aeroporto Charles de Gaulle potrebbe essere normale, poiché potrebbe non essere possibile raggiungere direttamente tutti gli aeroporti del mondo da questo aeroporto. La betweenness dipende dal numero di shortest path che passano attraverso un determinato nodo in una rete, e se non ci sono molti shortest path che passano attraverso l'aeroporto Charles de Gaulle, allora la sua betweenness sarà bassa\n",
+    "La bassa betweenness dell'aeroporto Charles de Gaulle potrebbe indicare che potrebbe non essere possibile raggiungere direttamente tutti gli aeroporti del mondo da questo aeroporto.\n",
     "\n",
     "Se in una rete il nodo con la massima betweenness ha una betweenness tendente a 0 ma un grado alto, ciò potrebbe indicare che il nodo in questione ha molti collegamenti diretti con altri nodi nella rete, ma questi non sono posizionati in modo tale da fare passare la maggior parte dei cammini più corti attraverso di essi. In altre parole, il nodo potrebbe avere molti vicini, ma questi non sono centrali nella rete. Di conseguenza, nonostante abbia un alto grado, il nodo non è particolarmente centrale nella rete in termini di betweenness."
    ]
@@ -269,8 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Distribuzioni di centralità\n",
-    "Posso riassumere le informazioni sulla centralità di tutti i nodi"
+    "#### Betweenness media e mediana"
    ]
   },
   {
@@ -305,6 +321,15 @@
     "Questo può indicare che la rete è costituita da diverse comunità o sottoreti che sono relativamente isolate l'una dall'altra e che la comunicazione tra queste comunità può richiedere percorsi più lunghi. In generale, una bassa betweenness non è necessariamente un indicatore negativo della struttura della rete, ma piuttosto suggerisce che la rete ha una struttura diversa rispetto a una rete in cui alcuni nodi hanno una forte centralità di betweenness.\n",
     "\n",
     "Se i valori di betweenness media e mediana sono molto bassi nella rete, ciò potrebbe indicare che questa è relativamente poco connessa o che la struttura della rete è altamente centralizzata con pochi nodi che sono particolarmente importanti per la connessione degli altri nodi."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Distribuzioni di centralità\n",
+    "Posso riassumere le informazioni sulla centralità di tutti i nodi"
    ]
   },
   {
